# clipper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  index.md.bak
benchmarks/: CMakeLists.txt  bm_utils.cpp  bm_utils.h  main.cpp
bindings/matlab/: CMakeLists.txt  euclideandistance_mex.cpp  finddensecluster_mex.cpp  knownscalepointcloud_mex.cpp  mexutils.h  planecloud_mex.cpp  planedistance_mex.cpp  pointnormaldistance_mex.cpp
bindings/python/: CMakeLists.txt  py_clipper.cpp  setup.py.in  trampolines.h
cmake/: FindMKL.cmake  clipper-config.cmake.in  pybind11.cmake.in
examples/data/: bun10k.ply  bun1k.ply
examples/matlab/: ex1_knownscalepointcloud.m  ex3_planecloud.m  ex4_bunny.m
examples/python/: ex4_bunny.ipynb
include/clipper/: affinity.h  association.h  clipper.h  dsd.h  find_dense_cluster.h  maxclique.h  sdp.h  types.h  utils.h
include/clipper/invariants/: abstract.h  builtins.h  euclidean_distance.h  known_scale_pointcloud.h  plane_distance.h  planecloud.h  pointnormal_distance.h
matlab/: clipper.m
src/: affinity.cpp  clipper.cpp  dsd.cpp  find_dense_cluster.cpp  maxclique.cpp  sdp.cpp  utils.cpp
src/invariants/: euclidean_distance.cpp  known_scale_pointcloud.cpp  plane_distance.cpp  planecloud.cpp  pointnormal_distance.cpp
test/: CMakeLists.txt  affinity_test.cpp  clipper_test.cpp  dsd_test.cpp  main.cpp  pointcloud_test.cpp  sdp_test.cpp
